# Robothon2024

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: old_tf2_from_2023.json  rviz_config.rviz  tf2.json  tf2_latest_backup.json  tf2_orig.json  tf2json_backup.json
include/MVSC2024-Setup_2024/: byod_tasks.hpp  task_board_tasks.hpp
include/msvc2024_setup/: tasks.hpp
include/robothon2023/: byod_tasks.hpp  task_board_tasks.hpp
launch/: taskboard_core.launch  taskboard_touchDetect.launch
src/: board_detection.py  board_detection_zed.py  byod_tasks.cpp  cam_calibration.py  cam_calibration_optimizer.py  ids_port_detection.py  linear_regr_z_offset.py  optimizer_testing.py  optimizer_values_test.py  point_recording.cpp  point_recording_new.cpp  roslibjs_service.py  screenTest.py  screen_detection.py  sift_board_detection.py  sift_board_detection_backup.py  sift_board_detection_old.py  task_board_scheduler.cpp  task_board_tasks.cpp  task_handler.cpp  task_scheduler.cpp  tasks_handler.cpp  tf2_publisher.cpp  touchDetection.cpp  touchDetection_service.cpp  triangle_lab.py
ui/: README.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
ui/Robothon-UI/: package-lock.json  package.json
ui/Robothon-UI/app/: globals.css  layout.tsx
ui/Robothon-UI/app/(dashboard)/: layout.tsx  page.tsx
ui/Robothon-UI/app/(dashboard)/_components/: ByodFlow.tsx  RobotStatus.tsx  TaskFlow.tsx
ui/Robothon-UI/app/(dashboard)/byod/: page.tsx
ui/Robothon-UI/app/(dashboard)/move/: page.tsx
ui/Robothon-UI/app/(dashboard)/new-services/: page.tsx
ui/Robothon-UI/app/(dashboard)/new-services/_components/: BoardDetection.tsx  Freedrive.tsx  GripperMove.tsx  SpeedSlider.tsx
ui/Robothon-UI/app/(dashboard)/services/: page.tsx
ui/Robothon-UI/app/(dashboard)/services/_components/Services/: BoardDetection.tsx  GripperMove.tsx  SpeedSlider.tsx
ui/Robothon-UI/app/(dashboard)/services/move/: page.tsx
ui/Robothon-UI/app/(dashboard)/taskboard/: page.tsx
ui/Robothon-UI/app/api/: route.ts
ui/Robothon-UI/app/fonts/: font.ts
ui/Robothon-UI/components/: animatedbutton.tsx
ui/Robothon-UI/components/ui/: mode-toggle.tsx  slider.tsx  spinner.tsx  toast.tsx
ui/Robothon-UI/store/: robotStore.ts  serviceStore.ts  statusStore.ts  store.ts
ui/Robothon-UI/utils/: ros.ts  services.ts  tf2.json  topics.ts
ui/app/: layout.tsx
ui/app/(dashboard)/: layout.tsx  page.tsx
ui/app/(dashboard)/_components/: RobotStatus.tsx  TaskFlow.tsx
ui/app/(dashboard)/byod/: page.tsx
ui/app/(dashboard)/move/: page.tsx
ui/app/(dashboard)/new-services/: page.tsx
ui/app/(dashboard)/new-services/_components/: BoardDetection.tsx  GripperMove.tsx  SpeedSlider.tsx
ui/app/(dashboard)/taskboard/: page.tsx
ui/app/api/: route.ts
ui/app/fonts/: font.ts
ui/components/: animatedbutton.tsx
ui/components/ui/: card.tsx  spinner.tsx  tabs.tsx
ui/store/: robotStore.ts  serviceStore.ts  statusStore.ts  store.ts
ui/utils/: ros.ts  services.ts
