<?xml version="1.0"?>
<package format="2">
  <name>MSVC2024_Setup_2024</name>
  <version>1.0.0</version>
  <description>The MSVC2024_Setup_2024 package contains the code for team RoboPigs solution to the Robothon 2024 competition</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="adrian.mueller@study.thws.de">Adrian Mueller</maintainer>
  <maintainer email="usama.ali@study.thws.de">Usama Ali</maintainer>
  <maintaier email="anirudh.panchangamranganath@study.thws.de">Anirudh Panchangam Ranganath</maintainer>
  <maintainer email="medhansh.rath@study.thws.de">Medhansh Rath</maintainer>
  <maintainer email="shubham.joshi@study.thws.de">Shubham Joshi</maintainer>





  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/MSVC2024_Setup_2024</url> -->


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>ur_ros_driver</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>tf2</build_export_depend>

  <build_depend>rosbrige_server</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>ur_ros_driver</exec_depend>

  <exec_depend>rosbridge_server</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
